<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name" >中煤易投</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_face_guide">FaceGuideActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_logs">LogsActivity</string>
    <string name="title_activity_account">账号管理</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="title_activity_network_online">NetworkOnlineActivity</string>
    <string name="title_activity_networks">NetworksActivity</string>
    <string name="title_activity_hotline">HotlineActivity</string>
    <string name="title_activity_faqs">FAQsActivity</string>
    <string name="title_activity_faq">FAQActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_setting_guide">SettingGuideActivity</string>
    <string name="title_activity_setting_launch">SettingLaunchActivity</string>
    <string name="title_activity_setting_version">SettingVersionActivity</string>
    <string name="title_activity_reg_account">RegAccountActivity</string>
    <string name="title_activity_my_settings">SettingsActivity</string>
    <string name="title_activity_my_settings_new">SettingsActivityNew</string>
    <string name="title_activity_settings_cert_type">SettingCertTypeActivity</string>
    <string name="title_activity_settings_log_uploade_type">SettingSaveTypeActivity</string>
    <string name="title_activity_settings_save_type">SettingLogUploadTypeActivity</string>
    <string name="title_activity_cert_detail">CertDetailActivity</string>
    <string name="title_activity_cert_list">CertListActivity</string>
    <string name="title_activity_cert_delete">CertDeleteActivity</string>
    <string name="title_activity_cert_pwd">CertChangePwdActivity</string>
    <string name="title_activity_dao_face">DaoFaceActivity</string>
    <string name="title_activity_user_protocol">UserProtocolActivity</string>
    <string name="title_activity_forget_pwd">ForgetPasswordActivity</string>
    <string name="title_activity_forget_pwd_valid">ForgetPasswordValidActivity</string>
    <string name="title_activity_set_pwd">SetPasswordActivity</string>
    <string name="title_activity_manu_check">ManualCheckActivity</string>
    <string name="title_activity_manu_check_fail">ManualCheckFailActivity</string>
    <string name="title_activity_scan_bluetooth">ScanBlueToothActivity</string>
    <string name="title_activity_card_reg">身份证识别</string>
    <string name="ib_account">account</string>
    <string name="ImageButton_back">back</string>
    <string name="iv_unitrust">unitrust</string>
    <string name="iv_log_certdetail">iv_log_certdetail</string>
    <string name="iv_advertisement">iv_advertisement</string>
    <string name="iv_arrow_go_desc">iv_arrow_go_desc</string>
    <string name="menu_home">首页</string>
    <string name="menu_cert">证书</string>
    <string name="menu_service">服务</string>
    <string name="menu_settings">我</string>
    <string name="module_apply_cert">申请证书</string>
    <string name="module_download_cert">下载证书</string>
    <string name="module_change_cert">设置别名</string>
    <string name="module_renew_cert">更新证书</string>
    <string name="module_revoke_cert">撤销证书</string>
    <string name="module_scan">扫一扫</string>
    <string name="module_scan_line">— 扫一扫 —</string>
    <string name="module_logs">使用记录</string>
    <string name="module_test">洛安测试</string>
    <string name="module_log">记录明细</string>
    <string name="module_setting">系统设置</string>
    <string name="module_password">帐户密码</string>
    <string name="moudle_hotline">热线电话</string>
    <string name="moudle_site">服务网点</string>
    <string name="moudle_online_sevice">在线客服</string>
    <string name="moudle_question">常见问题</string>
    <string name="moudle_view_cert">查看证书</string>
    <string name="moudle_change_pwd_cert">修改密码</string>
    <string name="moudle_reset_pwd_cert">重置密码</string>
    <string name="moudle_unlock_cert">解锁密码</string>
    <string name="moudle_delete_cert">删除证书</string>
    <string name="moudle_input_cert">导入证书</string>
    <string name="certdetail_version">证书版本</string>
    <string name="certdetail_certsn">证书序列号</string>
    <string name="certdetail_certsn2">证书序列号:</string>
    <string name="certdetail_leftdays">有效期剩余</string>
    <string name="certdetail_notBefore">有效期起</string>
    <string name="certdetail_notAfter">有效期止</string>
    <string name="certdetail_issuer">颁发者</string>
    <string name="certdetail_subject">使用者</string>
    <string name="certdetail_signatureAlg">签名算法</string>
    <string name="certdetail_certchainURL">证书链发布地址</string>
    <string name="certdetail_certtype">证书类型</string>
    <string name="certdetail_savetype">存储介质</string>
    <string name="certdetail_devicesn">介质序列号</string>
    <string name="certdetail_certkeysize">公钥长度</string>
    <string name="certdetail_subjectUID">主体唯一标识符</string>
    <string name="certdetail_icnumber">工商注册号</string>
    <string name="certdetail_taxnumber">税号</string>
    <string name="certdetail_orgcode">组织机构代码</string>
    <string name="certdetail_insnumber">社会保险号</string>
    <string name="certdetail_accfundnumber">住房公积金账号</string>
    <string name="certdetail_instinumber">事业单位证书号</string>
    <string name="certdetail_assnumber">社会组织法人编码</string>
    <string name="certdetail_govnumber">政府机关法人编码</string>
    <string name="certdetail_lawlicence">律师事务所执业许可证</string>
    <string name="certdetail_indilicence">个体工商户营业执照</string>
    <string name="certdetail_foreigncode">外国企业常驻代表机构登记证</string>
    <string name="certdetail_crednumber">统一社会信用代码</string>
    <string name="log_type">记录类型</string>
    <string name="log_time">记录时间</string>
    <string name="log_certsn">证书序列号</string>
    <string name="log_certdetail">证书详情</string>
    <string name="log_notes">签名原文</string>
    <string name="log_signature">数字签名</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_account_label">当前帐号</string>
    <string name="logout">退出当前帐号</string>
    <string name="title_activity_application">待下载证书</string>
    <string name="prompt_cert_orgpassword">原证书密码（8至16位）</string>
    <string name="prompt_cert_password1">新证书密码（8至16位）</string>
    <string name="prompt_cert_password2">再次输入新证书密码</string>
    <string name="prompt_prikey_password">输入证书密码（8至16位）</string>
    <string name="prompt_prikey_password2">再次输入证书密码（8至16位）</string>
    <string name="title_activity_dao">sheca签名登录</string>
    <string name="title_activity_scan_dao">sheca扫码签名登录</string>
    <string name="prompt_pwd">请输入证书保护口令（8-16位数字、字母）</string>
    <string name="cert_name">输入证书别名</string>
    <string name="cert_sms_code">填写验证码</string>
    <string name="send_message">发送验证码</string>
    <string name="forget_cert_pws"><u>重置证书密码</u></string>
    <string name="app_auth_name">人证一致</string>
    <string name="action_settings">设置</string>
    <string name="title_setpwd">设置证书密码</string>
    <string name="action_exit">退出</string>
    <string name="action_exit2">退出账号</string>
    <string name="title_activity_gif_view">GifViewActivity</string>
    <string name="title_activity_picture">拍取照片</string>
    <string name="title_activity_settings">常用设置</string>
    <string name="title_activity_auth">活体检测</string>
    <string name="title_activity_auth2">身份采集</string>
    <string name="title_activity_input">输入信息</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="prompt_name">请输入姓名</string>
    <string name="prompt_id">请输入身份证号</string>
    <string name="label_name">姓名</string>
    <string name="label_id">身份证</string>
    <string name="label_idnumber">身份证号</string>
    <string name="label_hint_result">认证结果</string>
    <string name="action_next">下一步</string>
    <string name="action_finish">重新提交</string>
    <string name="action_restart">重新开始</string>
    <string name="cancel">取消</string>
    <string name="permission">权限</string>
    <string name="debug">调试</string>
    <string name="setting">设置</string>
    <string name="auto_frame_show_switch_title">帧率显示</string>
    <string name="auto_bestphoto_count_title">保存照片</string>
    <string name="server_address_title">服务器URL</string>
    <string name="isneilflag_title">匿名登录</string>
    <string name="username_title">帐号</string>
    <string name="password_title">密码</string>
    <string name="surface_size_title">拍照画幅</string>
    <string name="auto_bestphoto_count_summary">设置保存照片数量</string>
    <string name="server_address_summary">设置后台服务器地址</string>
    <string name="auto_frame_show_setting_summary">帧率显示设置</string>
    <string name="auto_frame_show_switch_summary_on">开启帧率显示</string>
    <string name="auto_frame_show_switch_summary_off">关闭帧率显示</string>
    <string name="username_summary">提供您帐号</string>
    <string name="password_summary">提供您密码</string>
    <string name="surface_size_summary">画幅大小设置</string>
    <string name="frame_show_key">frame_show_key</string>
    <string name="bestphoto_count_key">bestphoto_count_key</string>
    <string name="isneilflag_key">isneilflag_key</string>
    <string name="username_key">username_key</string>
    <string name="password_key">password_key</string>
    <string name="server_address_key">server_address_key</string>
    <string name="surface_size_key">surface_size_key</string>
    <string name="server_address_defvalue">http://www.junyufr.com/CAAPPProject5/</string>
    <string name="auto_bestphoto_count_defvalue">1</string>
    <string name="frame_show_defvalue">false</string>
    <string name="surface_size_defvalue">1</string>
    <string name="function_options">功能调节</string>
    <string name="title_action_options">动作选择</string>
    <string name="action_count_default_value">3</string>
    <string name="title_action_count_options">执行次数</string>
    <string name="action_count_default">3次</string>
    <string name="action_count_options_title">执行次数</string>
    <string name="difficulty_level_default_value">1</string>
    <string name="title_difficulty_level_options">完成难度</string>
    <string name="difficulty_level_default">普通</string>
    <string name="difficulty_level_options_title">完成难度</string>
    <string name="project_id_defvalue">M2ta6aDVnRFiIpPeBuoTPAfT/0U=</string>
    <string name="project_id_key">project_id_key</string>
    <string name="setting_projectid_summary">设置项目编号</string>
    <string name="project_id_title">项目ID</string>
    <string name="version_info">版本信息</string>
    <string name="version_info_key">version_info_key</string>
    <string name="app_version_key">app_version_key</string>
    <string name="version_control_info">版本控制信息</string>
    <string name="app_version">app版本号</string>
    <string name="is_open_tick_default_value">开启</string>
    <string name="is_open_tick_dialog_title">是否打开倒计时声音？</string>
    <string name="is_open_tick_dialog_summary">设置倒计时</string>
    <string name="is_open_tick_key">is_open_tick_key</string>
    <string name="is_open_tick_title">倒计时声音</string>
    <string name="scan_login">扫码登录</string>
    <string name="scan_sign">扫码签名</string>
    <string name="scan_decrypt">扫码解密</string>
    <string name="scan_seal">扫码签章</string>
    <string name="selected_smrz">实名认证</string>
    <string name="selected_sqzs">申请证书</string>
    <string name="selected_sqyz">申请印章</string>
    <string name="selected_xzzs">下载证书</string>
    <string name="sig_seal">— 证书印章 —</string>
    <string name="action_count_options_key">action_count_options_key</string>
    <string name="difficulty_level_options_key">difficulty_level_options_key</string>
    <string name="action_options_key">action_options_key</string>
    <string name="app_ok">确定</string>
</resources>