<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"

    android:background="#00000000">

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:orientation="vertical">


        <!--<com.sheca.umandroid.adapter.ImageCycleEdgeView-->
            <!--android:id="@+id/ad_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/bg_theme_deep"></View>
            <ImageView
                android:layout_marginTop="50dp"
                android:scaleType="fitXY"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:background="@drawable/banner_new1" />

        </RelativeLayout>

        <TextView
            style="@style/selected_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/white"
            android:text="@string/module_scan_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingBottom="13dp">

            <Button
                android:id="@+id/scan_login"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/scanlogin"
                android:text="@string/scan_login" />

            <Button
                android:id="@+id/scan_sign"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/scansign"
                android:text="@string/scan_sign" />

            <Button
                android:id="@+id/scan_decrypt"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/scandecrypt"
                android:text="@string/scan_decrypt" />

            <Button
                android:id="@+id/scan_seal"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/scanseal"
                android:text="@string/scan_seal" />


        </LinearLayout>

        <TextView
            style="@style/selected_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sig_seal" 
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="22dp"
            android:paddingTop="13dp"
            android:paddingRight="22dp"
            android:paddingBottom="30dp"
            android:visibility="gone">

            <Button
                android:id="@+id/selected_smrz"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_smrz"
                android:text="@string/selected_smrz" />

            <Button
                android:id="@+id/selected_sqzs"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_sqzs"
                android:text="@string/selected_sqzs" />

            <Button
                android:id="@+id/selected_sqyz"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_sqyz"
                android:text="@string/selected_sqyz" />

            <Button
                android:id="@+id/selected_xzzs"
                style="@style/DashboardButton2"
                android:layout_weight="1"
                android:drawableTop="@drawable/selected_zsxz"
                android:text="@string/selected_xzzs" />
        </LinearLayout>

        <!-- 以下暂时不用，为避免空指针暂时保留，以后可以删除 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_scan"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/scan"
                android:text="@string/module_scan"
                />

            <Button
                android:id="@+id/button_apply_cert"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/moudle_apply_cert"
                android:text="@string/module_apply_cert"
                 />

            <Button
                android:id="@+id/button_download_cert"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/module_download_cert"
                android:text="@string/module_download_cert"
                />

            <Button
                android:id="@+id/button_input_cert"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/moudle_input_cert"
                android:text="@string/moudle_input_cert"
                 />

            <Button
                android:id="@+id/button_log"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/log"
                android:text="@string/module_logs"
                 />

            <Button
                android:id="@+id/button_Test"
                style="@style/DashboardButton2"
                android:drawableTop="@drawable/log"
                android:text="@string/module_test"
                 />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
