<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_gravity="fill_horizontal"
    android:background="@color/gray_light"
    android:orientation="vertical">

    <RelativeLayout
       android:id="@+id/Layout_my_info"
       android:layout_width="wrap_content"
       android:layout_height="200dp"
       android:background="@drawable/bg_no_cert">

      <RelativeLayout
         android:id="@+id/Layout_no_cert_info"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/bg_no_cert" />
        
      <RelativeLayout
         android:id="@+id/Layout_cert_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:orientation="horizontal"
         android:background="@drawable/bg_half_rect">
        
        <!--   ViewPager  -->
        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:clipChildren="false"
            >
        </android.support.v4.view.ViewPager>
        <!--  圆点指示器  -->
        <LinearLayout
            android:id="@+id/ll_dots"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="180dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
        </LinearLayout>
          
      </RelativeLayout>   
    </RelativeLayout>
    
    <com.sheca.umandroid.layout.DashboardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Layout_my_info"
        android:background="@color/white"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/button_view_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_view_cert"
            android:textColor="#000000"
            android:text="@string/moudle_view_cert" />
        
        <Button
            android:id="@+id/button_change_pwd_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_change_pwd_cert"
            android:textColor="#000000"
            android:text="@string/moudle_change_pwd_cert" />

        <Button
            android:id="@+id/button_change_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/module_change_name_cert"
            android:textColor="#000000"
            android:text="@string/module_change_cert" />
       
        <Button
            android:id="@+id/button_renew_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/module_renew_cert"
            android:textColor="#000000"
            android:text="@string/module_renew_cert" />
        
        <Button
            android:id="@+id/button_revoke_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/module_revoke_cert"
            android:textColor="#000000"
            android:text="@string/module_revoke_cert" />

        <Button
            android:id="@+id/button_delete_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_delete_cert"
            android:textColor="#000000"
            android:text="@string/moudle_delete_cert" />

        <Button
            android:id="@+id/button_reset_pwd_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_change_pwd_cert"
            android:textColor="#000000"
            android:text="@string/moudle_reset_pwd_cert" />

        <Button
            android:visibility="gone"
            android:id="@+id/button_unlock_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_change_pwd_cert"
            android:textColor="#000000"
            android:text="@string/moudle_unlock_cert" />

        <Button
            android:id="@+id/button_apply_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/selected_sqzs"
            android:textColor="#000000"
            android:visibility="gone"
            android:text="@string/module_apply_cert" />
        
        <Button
            android:id="@+id/button_download_cert"
            style="@style/DashboardButton2"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/selected_zsxz"
            android:textColor="#000000"
            android:visibility="gone"
            android:text="@string/module_download_cert" />
        


    </com.sheca.umandroid.layout.DashboardLayout>
    
</RelativeLayout>