<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:background="@drawable/home_bg"
    android:orientation="horizontal" >
    
    <!-- 
      <TextView
            android:id="@+id/ad_view"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:ellipsize="end"
            android:gravity="left"
            android:padding="10dp"
            android:singleLine="false"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="15dp" /> 
      -->

	 
	 <com.sheca.umandroid.adapter.ImageCycleView
        android:id="@+id/ad_view"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />
  
    <com.sheca.umandroid.layout.DashboardLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ad_view"
        android:layout_marginTop="10dp">
        
        <Button
            android:id="@+id/button_scan"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/scan"
            android:textColor="#000000"
            android:text="@string/module_scan" />

       <Button
            android:id="@+id/button_apply_cert"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_apply_cert"
            android:textColor="#000000"
            android:text="@string/module_apply_cert" />
        
        <Button
            android:id="@+id/button_download_cert"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/module_download_cert"
            android:textColor="#000000"
            android:text="@string/module_download_cert" />
        
        <Button
            android:id="@+id/button_input_cert"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/moudle_input_cert"
            android:textColor="#000000"
            android:text="@string/moudle_input_cert" />
 
        <Button
            android:id="@+id/button_log"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/log"
            android:textColor="#000000"
            android:text="@string/module_logs" />
      
         <Button
            android:id="@+id/button_Test"
            style="@style/DashboardButton"
            android:layout_gravity="fill"
            android:drawableTop="@drawable/log"
            android:textColor="#000000"
            android:text="@string/module_test" /> 
       

    </com.sheca.umandroid.layout.DashboardLayout>



</RelativeLayout>