<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:item="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@color/gray_light">

    <com.sheca.umandroid.layout.TextEditItem
        android:id="@+id/idCardname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        item:tv_text="@string/label_name"
        />

    <com.sheca.umandroid.layout.TextEditItem
        android:id="@+id/idCardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        item:tv_text="@string/label_idnumber"
        />

    <Button
        android:id="@+id/login_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        style="@style/btn_ok"
        android:text="@string/app_ok"
        />

</LinearLayout>